# websocket_flatbuffer

./: CMakeLists.txt  README.md
plugins/cb18/: CMakeLists.txt
plugins/cb18/protocol/fbs/: public.fbs  report.fbs  request.fbs  response.fbs
plugins/cb18/src/: HMIClient.cpp  HMIServices.cpp  message_handler.hpp
plugins/cb18/src/transport/: TransportMessage.h  WsFacade.cpp  WsFacade.h
plugins/cb18/src/transport/ws/: message_helper.hpp  socket_client.hpp  socket_server.hpp  ws_message.hpp
plugins/hmi/: CMakeLists.txt
plugins/hmi/protocol/: c2s.h  s2c.h
plugins/hmi/protocol/fbs/: c2s.fbs  gen.sh  s2c.fbs
plugins/hmi/src/: HMINode.cpp  message_handler.hpp  message_helper.hpp  socket_client.hpp  socket_server.hpp
plugins/ws-json/: CMakeLists.txt
plugins/ws-json/src/: HMIClient.cpp  HMIServices.cpp  message_handler.hpp
plugins/ws-json/src/transport/: WsFacade.cpp  WsFacade.h  base64.hpp
plugins/ws-json/src/transport/ws/: message_helper.hpp  socket_client.hpp  socket_server.hpp
